--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
     id "com.github.ben-manes.versions" version "0.38.0"
-    id 'org.springframework.boot' version '2.4.3'
+    id 'org.springframework.boot' version '2.4.5'
     id "io.spring.dependency-management" version "1.0.11.RELEASE"
     id "com.github.jk1.dependency-license-report" version "1.16"
-    id "com.thinkimi.gradle.MybatisGenerator" version "2.2"
-    id "com.gorylenko.gradle-git-properties" version "2.2.4"
+    id "com.thinkimi.gradle.MybatisGenerator" version "2.3"
+    id "com.gorylenko.gradle-git-properties" version "2.3.1"
 }
 
 apply plugin: 'java'
@@ -23,7 +23,7 @@ mybatisGenerator {
   configFile = "src/main/resources/mybatis/generatorConfig.xml"
   dependencies {
     mybatisGenerator 'org.mybatis.generator:mybatis-generator-core:1.4.0'
-    mybatisGenerator 'mysql:mysql-connector-java:8.0.23'
+    mybatisGenerator 'mysql:mysql-connector-java:8.0.24'
     mybatisGenerator 'org.postgresql:postgresql:42.2.19'
     mybatisGenerator 'com.itfsw:mybatis-generator-plugin:1.3.10'
   }
@@ -79,30 +79,30 @@ gitProperties {
 dependencies {
 
     //spring boot dependenies
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version:'2.4.3'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-jersey', version:'2.4.3'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version:'2.4.3'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-undertow', version:'2.4.3'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-cache', version: '2.4.3'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-webflux', version: '2.4.3'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version:'2.4.5'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-jersey', version:'2.4.5'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version:'2.4.5'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-undertow', version:'2.4.5'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-cache', version: '2.4.5'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-webflux', version: '2.4.5'
     
     //security
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.4.3'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.4.5'
     compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
     
     // email
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.4.3'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.4.5'
 
     // aspectj
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '2.4.3'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: '2.4.3'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '2.4.5'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: '2.4.5'
 //    compile group: 'cglib', name: 'cglib', version: '3.3.0'
 //    compile group: 'org.aspectj', name: 'aspectjtools', version: '1.9.6'
 //    compile group: 'org.aspectj', name: 'aspectjrt', version: '1.9.6'
 	
 	//template
-	compile group: 'org.springframework.boot', name: 'spring-boot-starter-freemarker', version: '2.4.3'
-	compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.4.3'
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-freemarker', version: '2.4.5'
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.4.5'
 //	compile group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '2.5.2'
 //    compile group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.2'
 //    compile group: 'com.itextpdf', name: 'itext-asian', version: '5.2.0'
@@ -110,13 +110,13 @@ dependencies {
     compile group: 'org.jsoup', name: 'jsoup', version: '1.13.1'
     
     //scheduler
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-quartz', version: '2.4.3'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-quartz', version: '2.4.5'
     
     // jersey
 //    compile group: 'org.glassfish.jersey.ext', name: 'jersey-bean-validation', version: '3.0.0'
     
     //redis
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '2.4.3'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '2.4.5'
  
     //mybatis dependencies
     compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version:'2.1.4'  
@@ -135,11 +135,11 @@ dependencies {
 //    compile group: 'org.ehcache', name: 'ehcache', version: '3.9.0'
     
     //database dependencies
-    compile group: 'org.postgresql', name: 'postgresql', version:'42.2.19'
+    compile group: 'org.postgresql', name: 'postgresql', version:'42.2.20'
 //    compile group: 'com.zaxxer', name: 'HikariCP', version:'4.0.1'
     
     //flywaydb   
-//    compile group: 'org.flywaydb', name: 'flyway-core', version: '7.5.1'
+    compile group: 'org.flywaydb', name: 'flyway-core', version: '7.8.2'
     
     //retrofit
     compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.9.0'
@@ -148,7 +148,7 @@ dependencies {
 //    compile group: 'com.jayway.jsonpath', name: 'json-path', version: '2.5.0'
     
     //jackson
-    compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-jsonSchema', version: '2.12.2'
+    compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-jsonSchema', version: '2.12.3'
 
     //swagger dependencies
     compile group: 'io.swagger', name: 'swagger-jersey2-jaxrs', version:'1.6.2'
@@ -163,7 +163,7 @@ dependencies {
 //    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '5.0.0'
 
     //test libs
-  testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.4.3'
+  testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.4.5'
 //  testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
 //    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0'
 //    testCompile group: 'org.junit.vintage', name: 'junit-vintage-engine', version: '5.7.0'
